--- a/index.html
+++ b/index.html
@@ -1,8 +1,54 @@
 <html>
     <head>
-        <title>css</title>
-    </head>
-    <body>
-        Hello wold!
-    </body>
+        <title>Yandex Music</title>
+      </head>
+      <body>
+        <header>
+          <h1>Yandex Music</h1>
+          <nav>
+            <ul>
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">Поиск</a></li>
+              <li><a href="#">Плейлисты</a></li>
+              <li><a href="#">Любимые исполнители</a></li>
+              <li><a href="#">Альбомы</a></li>
+            </ul>
+          </nav>
+        </header>
+        <main>
+          <section>
+            <h2>Топ песен</h2>
+            <ul>
+              <li>Песня 1</li>
+              <li>Песня 2</li>
+              <li>Песня 3</li>
+              <li>Песня 4</li>
+              <li>Песня 5</li>
+            </ul>
+          </section>
+          <section>
+            <h2>Новинки</h2>
+            <ul>
+              <li>Альбом 1</li>
+              <li>Альбом 2</li>
+              <li>Альбом 3</li>
+              <li>Альбом 4</li>
+              <li>Альбом 5</li>
+            </ul>
+          </section>
+          <section>
+            <h2>Жанры</h2>
+            <ul>
+              <li>Поп</li>
+              <li>Рок</li>
+              <li>Электроника</li>
+              <li>Хип-хоп</li>
+              <li>Классика</li>
+            </ul>
+          </section>
+        </main>
+        <footer>
+          <p>© 2023 Yandex Music. Все права защищены.</p>
+        </footer>
+      </body>
 </html>
